fixed swag json
