# swagger.json
@@ -25,16 +25,6 @@
         }
       }
     },
-    "/api-docs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/books/": {
       "get": {
         "tags": [
@@ -52,7 +42,7 @@
       },
       "post": {
         "tags": [
-          "Library"
+          "Books"
         ],
         "description": "",
         "parameters": [
@@ -100,10 +90,10 @@
         }
       }
     },
-    "/library/{id}": {
+    "/books/{id}": {
       "get": {
         "tags": [
-          "Library"
+          "Books"
         ],
         "description": "",
         "produces": [
@@ -180,7 +170,7 @@
       },
       "delete": {
         "tags": [
-          "Library"
+          "Books"
         ],
         "description": "",
         "parameters": [
